"update git url"

--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = webencodings
 url = http://pypi.debian.net/webencodings/webencodings-0.5.1.tar.gz
 archives = 
-giturl = 
+giturl = https://github.com/SimonSapin/python-webencodings.git
 
 [autospec]
 # build 32 bit libraries
